commit translated contents

--- a/docs/code-quality/c28213.md
+++ b/docs/code-quality/c28213.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C28213'
 title: C28213
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,16 +8,16 @@ f1_keywords:
 helpviewer_keywords:
 - C28213
 ms.assetid: e141a12a-4c46-47eb-aa9d-a6444472cfaa
-ms.openlocfilehash: b2cbc6e04cdf7074bd220c4b7c8286e64361d0c1
-ms.sourcegitcommit: 8e285a766523e653aeeb34d412dc6f615ef7b17b
+ms.openlocfilehash: 23508eea7c9650db05e2e9d4f1aa9aa417205acc
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 03/21/2020
-ms.locfileid: "80075148"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97284306"
 ---
 # <a name="c28213"></a>C28213
 
-> avviso C28213: è necessario utilizzare l'annotazione `_Use_decl_annotations_` per fare riferimento, senza alcuna modifica, a una dichiarazione precedente.
+> avviso C28213: l' `_Use_decl_annotations_` annotazione deve essere utilizzata per fare riferimento, senza alcuna modifica, a una dichiarazione precedente.
 
 `_Use_decl_annotations_` indica al compilatore di usare le annotazioni di una dichiarazione precedente della funzione.  Se non è possibile trovare una dichiarazione precedente o se la dichiarazione corrente apporta modifiche alle annotazioni rispetto a questo avviso viene emesso.
 
@@ -35,7 +36,7 @@ void example_func(_Out_writes_z_(n) char* buffer, int n)
 }
 ```
 
-L'annotazione del parametro `buffer` non corrisponde a quella dei due file.  Questo problema può essere risolto modificando l'annotazione in modo che corrisponda a tutti i percorsi oppure rimuovendo tutte le annotazioni ad eccezione `_Use_decl_annotations_` dalla definizione della funzione.  In questo esempio `_Out_writes_z_` sembra essere corretto, in modo che venga spostato nella dichiarazione di funzione nel file di intestazione.
+L' `buffer` annotazione del parametro non corrisponde tra i due file.  Questo problema può essere risolto modificando l'annotazione in modo che corrisponda a tutti i percorsi oppure rimuovendo tutte le annotazioni eccetto `_Use_decl_annotations_` la definizione della funzione.  In questo esempio `_Out_writes_z_` sembra che sia corretto, in modo che venga spostato nella dichiarazione di funzione nel file di intestazione.
 
 ```cpp
 
