--- a/docs/code-quality/c6306.md
+++ b/docs/code-quality/c6306.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: c6306'
 title: C6306
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,18 +8,18 @@ f1_keywords:
 helpviewer_keywords:
 - C6306
 ms.assetid: 7502710c-7e0e-4412-aecc-b6821cb8c182
-ms.openlocfilehash: 0fc8e0fa5416e8aefed55dd4424917ab005cc3df
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: cf15a703220c22f759d8c16777f1bb879520fa64
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77419845"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97284239"
 ---
 # <a name="c6306"></a>C6306
 
-> avviso c6306: chiamata non corretta a \<funzione >: provare a utilizzare \<funzione > che accetta un va_list come argomento
+> avviso c6306: chiamata non corretta a \<function> : provare a usare \<function> che accetta un va_list come argomento
 
-Questo avviso indica una chiamata di funzione non corretta. La famiglia di `printf` include diverse funzioni che accettano un elenco variabile di argomenti; Queste funzioni, tuttavia, non possono essere chiamate con un argomento `va_list`. Esiste una famiglia `vprintf` di funzioni corrispondente che può essere usata per tali chiamate. La chiamata della funzione di stampa errata provocherà un output non corretto.
+Questo avviso indica una chiamata di funzione non corretta. La `printf` famiglia include diverse funzioni che accettano un elenco variabile di argomenti. tali funzioni, tuttavia, non possono essere chiamate con un `va_list` argomento. Esiste una `vprintf` famiglia di funzioni corrispondente che può essere usata per queste chiamate. La chiamata della funzione di stampa errata provocherà un output non corretto.
 
 ## <a name="example"></a>Esempio
 
@@ -56,6 +57,6 @@ void f(int i, ...)
 }
 ```
 
-## <a name="see-also"></a>Vedere anche
+## <a name="see-also"></a>Vedi anche
 
 [C6273](../code-quality/c6273.md)
