--- a/docs/code-quality/c26427.md
+++ b/docs/code-quality/c26427.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C26427 NO_GLOBAL_INIT_EXTERNS'
 title: C26427
 ms.date: 11/15/2017
 ms.topic: conceptual
@@ -7,12 +8,12 @@ f1_keywords:
 helpviewer_keywords:
 - C26427
 ms.assetid: 8fb95a44-8704-45b1-bc55-eccd59b1db2f
-ms.openlocfilehash: 54f66f5cddaa438566bedcece75ec703bfc6d3af
-ms.sourcegitcommit: 65fead53d56d531d71be42216056aca5f44def11
+ms.openlocfilehash: e03f834d4cf815efce2a43a843f5c5ed3b6fa7b8
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/19/2020
-ms.locfileid: "88610868"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97303440"
 ---
 # <a name="c26427-no_global_init_externs"></a>NO_GLOBAL_INIT_EXTERNS C26427
 
@@ -22,7 +23,7 @@ ms.locfileid: "88610868"
 
 Gli oggetti globali possono essere inizializzati in un ordine incoerente o non definito, il che significa che l'interdipendenza tra di essi è rischiosa e deve essere evitata. Questa linea guida è applicabile quando gli inizializzatori fanno riferimento a un altro oggetto considerato come **`extern`** .
 
-## <a name="remarks"></a>Osservazioni
+## <a name="remarks"></a>Commenti
 
 Un oggetto viene considerato **`extern`** se è conforme alle regole seguenti:
 
