--- a/docs/code-quality/c28160.md
+++ b/docs/code-quality/c28160.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C28160'
 title: C28160
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,15 +8,15 @@ f1_keywords:
 helpviewer_keywords:
 - C28160
 ms.assetid: cab15f6b-909c-4cc8-81a0-c24ac7c91c7c
-ms.openlocfilehash: 4051e13479ce52c9e249927d70b02d6966ee81e1
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 7f068e8ebd7a6b8dc03c3eb306320f0079feddbf
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77417710"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97303505"
 ---
 # <a name="c28160"></a>C28160
 
 > avviso C28160: annotazione errore
 
-Questo avviso viene segnalato quando viene rilevata un'annotazione `__drv_error`. Questa annotazione viene utilizzata per contrassegnare le procedure di codifica da correggere e può essere utilizzata con un'annotazione `__drv_when` per indicare combinazioni specifiche di parametri.
+Questo avviso viene segnalato quando viene `__drv_error` rilevata un'annotazione. Questa annotazione viene utilizzata per contrassegnare le procedure di codifica da correggere e può essere utilizzata con un' `__drv_when` annotazione per indicare combinazioni specifiche di parametri.
