--- a/docs/code-quality/c28211.md
+++ b/docs/code-quality/c28211.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C28211'
 title: C28211
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,15 +8,15 @@ f1_keywords:
 helpviewer_keywords:
 - C28211
 ms.assetid: ce14ba26-daaf-47e0-940f-60073faa93b0
-ms.openlocfilehash: f2b569ae4db0da05429789f5466da36111c5eb79
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 0f72071def37a2a0e22d1cf098fa25bbd19e7371
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77417563"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97284356"
 ---
 # <a name="c28211"></a>C28211
 
 > avviso C28211: è previsto un nome di contesto statico per SAL_context
 
-Questo avviso indica che l'operando per l'annotazione `_Static_context_` deve corrispondere al nome di un contesto definito dallo strumento. Questo avviso non dovrebbe mai verificarsi nel normale utilizzo.
+Questo avviso indica che l'operando per l' `_Static_context_` annotazione deve essere il nome di un contesto definito dallo strumento. Questo avviso non dovrebbe mai verificarsi nel normale utilizzo.
