--- a/docs/code-quality/c6215.md
+++ b/docs/code-quality/c6215.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C6215'
 title: C6215
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,20 +8,20 @@ f1_keywords:
 helpviewer_keywords:
 - C6215
 ms.assetid: f20cc258-9c0f-4eaa-828d-74f76580ca78
-ms.openlocfilehash: cdfdc2edc7643a16d5b785d870accf4aa6a07a9d
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 01855eded559459ba58cd03f44fa3c56904734e2
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77420664"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97303310"
 ---
 # <a name="c6215"></a>C6215
 
 > avviso C6215: cast tra tipi integer semanticamente diversi: da un tipo Boolean a HRESULT
 
-Questo avviso indica che è in corso il cast di un valore booleano a un `HRESULT`. I tipi booleani indicano l'esito positivo di un valore diverso da zero, mentre Success (`S_OK`) in `HRESULT` è indicato da un valore pari a 0. Il cast di un tipo booleano a un `HRESULT` e quindi l'uso in un'espressione di test produrrà un risultato errato.
+Questo avviso indica che è in corso il cast di un valore booleano a un `HRESULT` . I tipi booleani indicano l'esito positivo di un valore diverso da zero, mentre Success ( `S_OK` ) in `HRESULT` è indicato da un valore pari a 0. Il cast di un tipo booleano a un oggetto `HRESULT` e quindi l'uso in un'espressione di test produrrà un risultato errato.
 
-Questo avviso si verifica spesso quando un valore booleano viene usato come argomento per `SUCCEEDED` o `FAILED` macro, che esegue il cast esplicito dei rispettivi argomenti a un `HRESULT`.
+Questo avviso si verifica spesso quando un valore booleano viene usato come argomento della `SUCCEEDED` `FAILED` macro o, che esegue il cast esplicito degli argomenti in un oggetto `HRESULT` .
 
 ## <a name="example"></a>Esempio
 
@@ -43,7 +44,7 @@ void f( REFGUID riid1, REFGUID riid2 )
 }
 ```
 
-In genere, è consigliabile applicare le macro `SUCCEEDED` o `FAILED` solo a `HRESULT`.
+In genere, `SUCCEEDED` le `FAILED` macro o devono essere applicate solo a `HRESULT` .
 
 Per correggere il problema, usare il codice seguente:
 
