--- a/docs/code-quality/c6303.md
+++ b/docs/code-quality/c6303.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C6303'
 title: C6303
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,16 +8,16 @@ f1_keywords:
 helpviewer_keywords:
 - C6303
 ms.assetid: b29aa352-9382-49d4-aeb8-03f34b0639a0
-ms.openlocfilehash: 9851856caeae17ec417b5c6e957a574f3cd72494
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 44f2424b1e489e11dd557829adb6433171efe597
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77419880"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97284273"
 ---
 # <a name="c6303"></a>C6303
 
-> avviso C6303: stringa di formato non corrispondente: stringa di caratteri wide passata come parametro \<numero > quando è richiesta una stringa di caratteri nella chiamata a \<funzione >
+> avviso C6303: stringa di formato non corrispondente: stringa di caratteri wide passata come parametro \<number> quando è richiesta una stringa di caratteri nella chiamata a \<function>
 
 Questo avviso indica che la stringa di formato specifica che è richiesta una stringa di caratteri. Tuttavia, viene passata una stringa di caratteri wide. È probabile che questo difetto provochi un arresto anomalo o un danneggiamento di qualche forma.
 
@@ -48,7 +49,7 @@ void f()
 }
 ```
 
-Nel codice di esempio seguente viene utilizzata la funzione Safe String Manipulation `printf_s` per correggere il problema:
+Il codice di esempio seguente usa la funzione Safe String Manipulation `printf_s` per correggere il problema:
 
 ```cpp
 #include <stdio.h>
