commit translated contents

--- a/docs/code-quality/c26401.md
+++ b/docs/code-quality/c26401.md
@@ -1,31 +1,31 @@
 ---
 title: C26401
-ms.date: 07/21/2017
+ms.date: 12/14/2020
 ms.topic: conceptual
 f1_keywords:
 - C26401
 helpviewer_keywords:
 - C26401
 ms.assetid: b9d3d398-697a-4a5d-8bfe-9c667dffb90b
-description: Regola CppCoreCheck che impone Linee guida di base di C++ I. 11
-ms.openlocfilehash: 4af74ec8463d533c1e65bca373fab6278a0464aa
-ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
+description: Regola CppCoreCheck C26401 impone Linee guida di base di C++ I. 11
+ms.openlocfilehash: 437095550f23227fdcc8f6cdf671f2d78c97ee51
+ms.sourcegitcommit: 387ce22a3b0137f99cbb856a772b5a910c9eba99
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/29/2020
-ms.locfileid: "91509579"
+ms.lasthandoff: 12/17/2020
+ms.locfileid: "97645150"
 ---
 # <a name="c26401-dont_delete_non_owner"></a>DONT_DELETE_NON_OWNER C26401
 
-Questo controllo rileva le posizioni in cui `owner<T>` il passaggio a può essere una soluzione ideale per la prima fase del refactoring. Analogamente a C26400, applica le regole I. 11 e R. 3, ma è incentrato sulla parte "release" della durata del puntatore. Viene visualizzato un avviso su qualsiasi chiamata a Operator **`delete`** se la relativa destinazione non è né un `owner<T>` proprietario assunto in modo implicito. Per ulteriori informazioni, vedere [C26400](c26400.md) relative alle **`auto`** dichiarazioni. Sono incluse le espressioni che fanno riferimento a variabili globali, moduli e così via.
+Questo controllo rileva le posizioni in cui `owner<T>` il passaggio a può essere una soluzione ideale per la prima fase del refactoring. Analogamente a C26400, applica le regole I. 11 e R. 3, ma è incentrato sulla parte "release" della durata del puntatore. Viene visualizzato un avviso su qualsiasi chiamata a Operator **`delete`** se la destinazione non è `owner<T>` o un proprietario assunto in modo implicito. Per ulteriori informazioni sulle **`auto`** dichiarazioni, vedere [C26400](c26400.md). Questo controllo include espressioni che fanno riferimento a variabili globali, parametri formali e così via.
 
-Gli avvisi C26400 e C26401 si verificano sempre con [C26409](c26409.md), ma sono più appropriati per gli scenari in cui non è possibile eseguire la migrazione immediata ai puntatori intelligenti. In questi casi, il `owner<T>` concetto può essere adottato per primo e C26409 può essere temporaneamente eliminato.
+Gli avvisi C26400 e C26401 si verificano sempre con [C26409](c26409.md), ma sono più appropriati per gli scenari in cui la migrazione immediata ai puntatori intelligenti non è fattibile. In questi casi, il `owner<T>` concetto può essere adottato per primo e C26409 può essere temporaneamente eliminato.
 
 ## <a name="see-also"></a>Vedere anche
 
 [Linee guida di base di C++ I. 11](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#i11-never-transfer-ownership-by-a-raw-pointer-t-or-reference-t)
 
-## <a name="example"></a>Esempio
+## <a name="examples"></a>Esempi
 
 ```cpp
 struct myStruct {};
@@ -53,3 +53,25 @@ void function()
     delete pMyStruct; // no warning.
 }
 ```
+
+È presente un linguaggio C++, `delete this` , che attiva questo avviso. L'avviso è intenzionale, perché il Linee guida di base di C++ scoraggiare questo modello. È possibile disattivare l'avviso utilizzando l' `gsl::suppress` attributo, come illustrato nell'esempio seguente:
+
+```cpp
+class MyReferenceCountingObject final
+{
+public:
+    void AddRef();
+    void Release() noexcept
+    {
+        ref_count_--;
+        if (ref_count_ == 0)
+        {
+            [[gsl::suppress(i.11)]]
+            delete this; 
+        }
+    }
+private:
+    unsigned int ref_count_{1};
+};
+```
+
