--- a/docs/code-quality/c26409.md
+++ b/docs/code-quality/c26409.md
@@ -1,36 +1,36 @@
 ---
-description: 'Altre informazioni su: C26409 NO_NEW_DELETE'
+description: 'Altre informazioni su CppCoreCheck Rule C26409: evitare esplicitamente New e DELETE.'
 title: C26409
-ms.date: 08/20/2020
+ms.date: 12/14/2020
 ms.topic: conceptual
 f1_keywords:
 - C26409
 helpviewer_keywords:
 - C26409
 ms.assetid: a3b3a229-d566-4be3-bd28-2876ccc8dc37
-ms.openlocfilehash: 2d6a384ac9b1b7966478021b818333de2feb23c6
-ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
+ms.openlocfilehash: d24d01a5db664c698b109ef008010ecd8fecf91c
+ms.sourcegitcommit: 387ce22a3b0137f99cbb856a772b5a910c9eba99
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 12/11/2020
-ms.locfileid: "97256094"
+ms.lasthandoff: 12/17/2020
+ms.locfileid: "97645189"
 ---
 # <a name="c26409-no_new_delete"></a>NO_NEW_DELETE C26409
 
 > `Avoid calling new and delete explicitly, use std::make_unique<T> instead (r.11).`
 
-Anche se il codice è pulito dalle chiamate a `malloc()` e `free()` , è comunque consigliabile prendere in considerazione opzioni migliori rispetto all'uso esplicito degli operatori [ `new` e `delete` ](../cpp/new-and-delete-operators.md).
+Anche se il codice è pulito dalle chiamate a `malloc` e `free` , è comunque consigliabile prendere in considerazione opzioni migliori rispetto all'uso esplicito degli operatori [ `new` e `delete` ](../cpp/new-and-delete-operators.md).
 
 **Linee guida di base di C++**: \
 [R. 11: evitare la chiamata al nuovo ed eliminare in modo esplicito](https://isocpp.github.io/CppCoreGuidelines/CppCoreGuidelines#r11-avoid-calling-new-and-delete-explicitly)
 
 La correzione finale consiste nell'utilizzare i puntatori intelligenti e le funzioni predefinite appropriate, ad esempio [`std::make_unique`](../standard-library/memory-functions.md#make_unique) .
 
-## <a name="remarks"></a>Commenti
+## <a name="remarks"></a>Osservazioni
 
 - Il controllo Avvisa in caso di chiamate a qualsiasi tipo di operatore **`new`** o **`delete`** : scalare, vettore, versioni di overload (globali e specifiche della classe) e versioni di posizionamento. Il caso di posizionamento **`new`** potrebbe richiedere alcuni chiarimenti nelle linee guida principali per le correzioni suggerite e può essere omesso in futuro.
 
-## <a name="example"></a>Esempio
+## <a name="examples"></a>Esempi
 
 Questo esempio mostra che C26409 viene generato per gli espliciti **`new`** e **`delete`** . Prendere in considerazione l'uso di funzioni di factory del puntatore intelligente, come in `std::make_unique` alternativa.
 
@@ -42,4 +42,25 @@ void f(int i)
 
     auto unique = std::make_unique<int[]>(i); // prefer using smart pointers over new and delete
 }
+```
+
+È presente un linguaggio C++, `delete this` , che attiva questo avviso. L'avviso è intenzionale, perché il Linee guida di base di C++ scoraggiare questo modello. È possibile disattivare l'avviso utilizzando l' `gsl::suppress` attributo, come illustrato nell'esempio seguente:
+
+```cpp
+class MyReferenceCountingObject final
+{
+public:
+    void AddRef();
+    void Release() noexcept
+    {
+        ref_count_--;
+        if (ref_count_ == 0)
+        {
+            [[gsl::suppress(i.11)]]
+            delete this; 
+        }
+    }
+private:
+    unsigned int ref_count_{1};
+};
 ```
